# nam-binary-loader

./: CMakeLists.txt  LICENSE  README.md
include/namb/: get_dsp_namb.cpp  get_dsp_namb.h
namb/: binary_parser_registry.h  get_dsp_namb.cpp
test/: test_namb.cpp
tools/: loadmodel.cpp  nam2namb.cpp  render_namb.cpp
